tests/requests/invalid/022.http
GET /first HTTP/1.0\r\n
Content-Length: -0\r\n
\r\n